<resources>
    <string name="app_name">Inventory App</string>
    <string name="inventory_app">Inventory App</string>
    <string name="log_in">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="product_name">Product Name</string>
    <string name="inventory_item_desc">Picture of inventory item</string>
    <string name="SMS_permission_verbiage">This app can send you SMS notifications about inventory and events. Please grant SMS permission.</string>
    <string name="grant_sms_permission">Grant</string>
    <string name="deny">Deny</string>
    <string name="enter_description">Enter description</string>
    <string name="quantity_placeholder">Quantity</string>
    <string name="number_placeholder">0</string>
    <string name="neg_sign">-</string>
    <string name="pos_sign">+</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="description">Description</string>
    <string name="enter_product_name">Enter product name</string>
    <string name="temp_image_desc">This is an image description</string>
    <string name="add_edit">Add/Edit</string>
    <string name="add_button_desc">Add button</string>
    <string name="back_button">Back arrow</string>
    <string name="delete_confirmation_text">Are you sure you want to delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="picture_of_cog_to_settings_page">Picture of cog to settings page</string>
    <string name="settings">Settings</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="sms_notifications">Enable SMS Notifications</string>
</resources>