<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:minHeight="100dp"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewProduct"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/inventory_item_desc"
            android:src="@mipmap/ic_launcher_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewProductName"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/product_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageViewProduct"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewQuantity"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/quantity"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            app:layout_constraintStart_toEndOf="@id/imageViewProduct"
            app:layout_constraintTop_toBottomOf="@id/textViewProductName" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/delete"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="11sp"
            app:layout_constraintBottom_toTopOf="@+id/buttonEdit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonEdit"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/edit"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="11sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
